plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.test'
version = '1.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot Web & WebSocket
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // 채팅 기능 구현 (WebSocket + Redis Pub/Sub)
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // 분산 락 (Redis Redisson).
    // Spring 공식 BOM에 포함되어 있지 않기 때문에 버전 명시해줘야 함
    implementation 'org.redisson:redisson-spring-boot-starter:3.27.2'

    // TODO 삭제
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // PostgreSQL
    runtimeOnly 'org.postgresql:postgresql'

    // Lombok for reduced boilerplate code
    implementation 'org.projectlombok:lombok:1.18.22'
    annotationProcessor 'org.projectlombok:lombok:1.18.22'

    // WAR는 외부 Tomcat
//    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
    // JAR 는 내부 Tomcat
    implementation 'org.springframework.boot:spring-boot-starter-tomcat'

    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    // SpringDoc OpenAPI + Swagger UI
    // spring boot 3.4 버전과 쓰면 에러 발생
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'

    // Testing
    testRuntimeOnly 'com.h2database:h2'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
}

// Spring Boot 3.x 버전부터 기본적으로 JUnit 5(Jupiter) 해서 설정 불필요
// Gradle이 JUnit5 테스트 엔진을 인식하고 실행하도록 지정
//tasks.named('test') {
tasks.withType(Test).configureEach {
    useJUnitPlatform()
}
